--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/ejs": "^2.6.3",
-    "body-parser": "^1.19.0",
-    "ejs": "^2.7.1",
-    "express": "^4.17.1",
+    "@types/ejs": "2.6.3",
+    "body-parser": "1.19.0",
+    "cuid": "2.1.6",
+    "ejs": "2.7.1",
+    "express": "4.17.1",
     "puppeteer": "2.0.0",
     "ts-lint": "4.5.1",
     "typescript": "3.6.4"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.17.1",
-    "@types/express": "^4.17.2",
+    "@types/body-parser": "1.17.1",
+    "@types/express": "4.17.2",
     "@types/puppeteer": "1.20.2",
-    "nodemon": "^1.19.4",
+    "nodemon": "1.19.4",
     "ts-node": "8.4.1"
   }
 }
