--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cuid": "2.1.6",
     "ejs": "2.7.1",
     "express": "4.17.1",
+    "fancy-log": "1.3.3",
     "puppeteer": "2.0.0",
     "ts-lint": "4.5.1",
     "typescript": "3.6.4"
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@types/body-parser": "1.17.1",
     "@types/express": "4.17.2",
+    "@types/fancy-log": "1.3.1",
     "@types/puppeteer": "1.20.2",
     "nodemon": "1.19.4",
     "ts-node": "8.4.1"
