--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:server": "nodemon -e ts -w ./ -x ts-node --project ./tsconfig.json ./application/app.ts"
+    "start:server": "nodemon -e ts -w ./ -x ts-node --project ./tsconfig.json ./application/app.ts",
+    "start:loadtest": "k6 run application/loadTest.js"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +26,7 @@
     "@types/express": "4.17.2",
     "@types/fancy-log": "1.3.1",
     "@types/puppeteer": "1.20.2",
+    "k6": "0.0.0",
     "nodemon": "1.19.4",
     "ts-node": "8.4.1"
   }
